include/joltc.h

typedef enum JPH_SixDOFConstraintAxis {
	JPH_SixDOFConstraintAxis_TranslationX,
	JPH_SixDOFConstraintAxis_TranslationY,
	JPH_SixDOFConstraintAxis_TranslationZ,

	JPH_SixDOFConstraintAxis_RotationX,
	JPH_SixDOFConstraintAxis_RotationY,
	JPH_SixDOFConstraintAxis_RotationZ,

	_JPH_SixDOFConstraintAxis_Count,
	_JPH_SixDOFConstraintAxis_Force32 = 0x7FFFFFFF
} JPH_SixDOFConstraintAxis;
typedef enum JPH_SpringMode {
	JPH_SpringMode_FrequencyAndDamping = 0,
	JPH_SpringMode_StiffnessAndDamping = 1,

	_JPH_SpringMode_Count,
	_JPH_SpringMode_Force32 = 0x7FFFFFFF
} JPH_SpringMode;
/// Defines how to color soft body constraints
typedef enum JPH_SoftBodyConstraintColor
{
	JPH_SoftBodyConstraintColor_ConstraintType,				/// Draw different types of constraints in different colors
	JPH_SoftBodyConstraintColor_ConstraintGroup,			/// Draw constraints in the same group in the same color, non-parallel group will be red
	JPH_SoftBodyConstraintColor_ConstraintOrder,			/// Draw constraints in the same group in the same color, non-parallel group will be red, and order within each group will be indicated with gradient

	_JPH_SoftBodyConstraintColor_Count,
	_JPH_SoftBodyConstraintColor_Force32 = 0x7FFFFFFF
} JPH_SoftBodyConstraintColor;
typedef enum JPH_BodyManager_ShapeColor
{
	JPH_BodyManager_ShapeColor_InstanceColor,				///< Random color per instance
	JPH_BodyManager_ShapeColor_ShapeTypeColor,				///< Convex = green, scaled = yellow, compound = orange, mesh = red
	JPH_BodyManager_ShapeColor_MotionTypeColor,			///< Static = grey, keyframed = green, dynamic = random color per instance
	JPH_BodyManager_ShapeColor_SleepColor,					///< Static = grey, keyframed = green, dynamic = yellow, sleeping = red
	JPH_BodyManager_ShapeColor_IslandColor,				///< Static = grey, active = random color per island, sleeping = light grey
	JPH_BodyManager_ShapeColor_MaterialColor,				///< Color as defined by the PhysicsMaterial of the shape

	_JPH_BodyManager_ShapeColor_Count,
	_JPH_BodyManager_ShapeColor_Force32 = 0x7FFFFFFF
} JPH_BodyManager_ShapeColor;
typedef enum JPH_DebugRenderer_CastShadow {
	JPH_DebugRenderer_CastShadow_On = 0,    ///< This shape should cast a shadow
	JPH_DebugRenderer_CastShadow_Off = 1,   ///< This shape should not cast a shadow

	_JPH_DebugRenderer_CastShadow_Count,
	_JPH_DebugRenderer_CastShadow_Force32 = 0x7FFFFFFF
} JPH_DebugRenderer_CastShadow;
typedef enum JPH_DebugRenderer_DrawMode {
	JPH_DebugRenderer_DrawMode_Solid = 0,       ///< Draw as a solid shape
	JPH_DebugRenderer_DrawMode_Wireframe = 1,   ///< Draw as wireframe

	_JPH_DebugRenderer_JPH_DebugRenderer_DrawMode_Count,
	_JPH_DebugRenderer_JPH_DebugRenderer_DrawMode_Force32 = 0x7FFFFFFF
} JPH_DebugRenderer_DrawMode;
typedef struct JPH_Vec3 {
	float x;
	float y;
	float z;
} JPH_Vec3;
typedef struct JPH_Vec4 {
	float x;
	float y;
	float z;
	float w;
} JPH_Vec4;
typedef struct JPH_Quat {
	float x;
	float y;
	float z;
	float w;
} JPH_Quat;
typedef struct JPH_Plane {
	JPH_Vec3 normal;
	float distance;
} JPH_Plane;
typedef struct JPH_Matrix4x4 {
	float m11, m12, m13, m14;
	float m21, m22, m23, m24;
	float m31, m32, m33, m34;
	float m41, m42, m43, m44;
} JPH_Matrix4x4;