csbind/src/joltc.rs

pub const JPH_SixDOFConstraintAxis__JPH_SixDOFConstraintAxis_Count: JPH_SixDOFConstraintAxis = 6;
pub const JPH_SixDOFConstraintAxis__JPH_SixDOFConstraintAxis_Force32: JPH_SixDOFConstraintAxis =
    2147483647;
pub type JPH_SixDOFConstraintAxis = ::std::os::raw::c_int;
pub const JPH_SpringMode_JPH_SpringMode_FrequencyAndDamping: JPH_SpringMode = 0;
pub const JPH_SpringMode_JPH_SpringMode_StiffnessAndDamping: JPH_SpringMode = 1;
pub const JPH_SpringMode__JPH_SpringMode_Count: JPH_SpringMode = 2;
pub const JPH_SpringMode__JPH_SpringMode_Force32: JPH_SpringMode = 2147483647;
pub type JPH_SpringMode = ::std::os::raw::c_int;
pub const JPH_SoftBodyConstraintColor_JPH_SoftBodyConstraintColor_ConstraintType:
    JPH_SoftBodyConstraintColor = 0;
#[doc = " Draw different types of constraints in different colors"]
pub const JPH_SoftBodyConstraintColor_JPH_SoftBodyConstraintColor_ConstraintGroup:
    JPH_SoftBodyConstraintColor = 1;
#[doc = " Draw constraints in the same group in the same color, non-parallel group will be red"]
pub const JPH_SoftBodyConstraintColor_JPH_SoftBodyConstraintColor_ConstraintOrder:
    JPH_SoftBodyConstraintColor = 2;
#[doc = " Draw constraints in the same group in the same color, non-parallel group will be red, and order within each group will be indicated with gradient"]
pub const JPH_SoftBodyConstraintColor__JPH_SoftBodyConstraintColor_Count:
    JPH_SoftBodyConstraintColor = 3;
#[doc = " Draw constraints in the same group in the same color, non-parallel group will be red, and order within each group will be indicated with gradient"]
pub const JPH_SoftBodyConstraintColor__JPH_SoftBodyConstraintColor_Force32:
    JPH_SoftBodyConstraintColor = 2147483647;
#[doc = " Defines how to color soft body constraints"]
pub type JPH_SoftBodyConstraintColor = ::std::os::raw::c_int;
#[doc = "< Random color per instance"]
pub const JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_InstanceColor:
    JPH_BodyManager_ShapeColor = 0;
#[doc = "< Convex = green, scaled = yellow, compound = orange, mesh = red"]
pub const JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_ShapeTypeColor:
    JPH_BodyManager_ShapeColor = 1;
#[doc = "< Static = grey, keyframed = green, dynamic = random color per instance"]
pub const JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_MotionTypeColor:
    JPH_BodyManager_ShapeColor = 2;
#[doc = "< Static = grey, keyframed = green, dynamic = yellow, sleeping = red"]
pub const JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_SleepColor:
    JPH_BodyManager_ShapeColor = 3;
#[doc = "< Static = grey, active = random color per island, sleeping = light grey"]
pub const JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_IslandColor:
    JPH_BodyManager_ShapeColor = 4;
#[doc = "< Color as defined by the PhysicsMaterial of the shape"]
pub const JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_MaterialColor:
    JPH_BodyManager_ShapeColor = 5;
pub const JPH_BodyManager_ShapeColor__JPH_BodyManager_ShapeColor_Count: JPH_BodyManager_ShapeColor =
    6;
pub const JPH_BodyManager_ShapeColor__JPH_BodyManager_ShapeColor_Force32:
    JPH_BodyManager_ShapeColor = 2147483647;
pub type JPH_BodyManager_ShapeColor = ::std::os::raw::c_int;
#[doc = "< This shape should cast a shadow"]
pub const JPH_DebugRenderer_CastShadow_JPH_DebugRenderer_CastShadow_On:
    JPH_DebugRenderer_CastShadow = 0;
#[doc = "< This shape should not cast a shadow"]
pub const JPH_DebugRenderer_CastShadow_JPH_DebugRenderer_CastShadow_Off:
    JPH_DebugRenderer_CastShadow = 1;
pub const JPH_DebugRenderer_CastShadow__JPH_DebugRenderer_CastShadow_Count:
    JPH_DebugRenderer_CastShadow = 2;
pub const JPH_DebugRenderer_CastShadow__JPH_DebugRenderer_CastShadow_Force32:
    JPH_DebugRenderer_CastShadow = 2147483647;
pub type JPH_DebugRenderer_CastShadow = ::std::os::raw::c_int;
#[doc = "< Draw as a solid shape"]
pub const JPH_DebugRenderer_DrawMode_JPH_DebugRenderer_DrawMode_Solid: JPH_DebugRenderer_DrawMode =
    0;
#[doc = "< Draw as wireframe"]
pub const JPH_DebugRenderer_DrawMode_JPH_DebugRenderer_DrawMode_Wireframe:
    JPH_DebugRenderer_DrawMode = 1;
pub const JPH_DebugRenderer_DrawMode__JPH_DebugRenderer_JPH_DebugRenderer_DrawMode_Count:
    JPH_DebugRenderer_DrawMode = 2;
pub const JPH_DebugRenderer_DrawMode__JPH_DebugRenderer_JPH_DebugRenderer_DrawMode_Force32:
    JPH_DebugRenderer_DrawMode = 2147483647;
pub type JPH_DebugRenderer_DrawMode = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_Vec3 {
    pub x: f32,
    pub y: f32,
    pub z: f32,
}
#[test]
fn bindgen_test_layout_JPH_Vec3() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_Vec3> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_Vec3>(),
        12usize,
        concat!("Size of: ", stringify!(JPH_Vec3))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_Vec3>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_Vec3))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Vec3),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Vec3),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Vec3),
            "::",
            stringify!(z)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_Vec4 {
    pub x: f32,
    pub y: f32,
    pub z: f32,
    pub w: f32,
}
#[test]
fn bindgen_test_layout_JPH_Vec4() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_Vec4> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_Vec4>(),
        16usize,
        concat!("Size of: ", stringify!(JPH_Vec4))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_Vec4>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_Vec4))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Vec4),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Vec4),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Vec4),
            "::",
            stringify!(z)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).w) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Vec4),
            "::",
            stringify!(w)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_Quat {
    pub x: f32,
    pub y: f32,
    pub z: f32,
    pub w: f32,
}
#[test]
fn bindgen_test_layout_JPH_Quat() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_Quat> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_Quat>(),
        16usize,
        concat!("Size of: ", stringify!(JPH_Quat))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_Quat>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_Quat))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Quat),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Quat),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Quat),
            "::",
            stringify!(z)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).w) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Quat),
            "::",
            stringify!(w)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_Plane {
    pub normal: JPH_Vec3,
    pub distance: f32,
}
#[test]
fn bindgen_test_layout_JPH_Plane() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_Plane> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_Plane>(),
        16usize,
        concat!("Size of: ", stringify!(JPH_Plane))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_Plane>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_Plane))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).normal) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Plane),
            "::",
            stringify!(normal)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).distance) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Plane),
            "::",
            stringify!(distance)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_Matrix4x4 {
    pub m11: f32,
    pub m12: f32,
    pub m13: f32,
    pub m14: f32,
    pub m21: f32,
    pub m22: f32,
    pub m23: f32,
    pub m24: f32,
    pub m31: f32,
    pub m32: f32,
    pub m33: f32,
    pub m34: f32,
    pub m41: f32,
    pub m42: f32,
    pub m43: f32,
    pub m44: f32,
}
